--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- преимущества -->
       <section class="section advantages">
         <div class="container">
-          <h2 style="display: none">Преимущества</h2>
+          <h2 class="visually-hidden">Преимущества</h2>
           <ul class="list advantages-list">
             <li class="advantage-item">
               <div class="icon-wrap">
@@ -400,16 +400,74 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subtitle">Подпишитесь на рассылку</p>
+          <form class="form form-subscribe">
+            <input class="form-input" type="email" name="" id="" placeholder="E-mail" />
+            <button class="button button-main" type="submit">
+              Подписаться
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-modal" data-modal-close>
-          <svg class="icon">
+          <svg class="icon" width="11" height="11">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <form class="form">
+          <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
+          <div class="form-field">
+            <label for="name">Имя</label>
+            <input class="form-input" type="text" name="name" id="name" />
+            <svg class="icon" width="18" height="18">
+              <use href="./images/icons.svg#person"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label for="phone">Телефон</label>
+            <input class="form-input" type="tel" name="phone" id="phone" />
+            <svg class="icon" width="18" height="18">
+              <use href="./images/icons.svg#tel"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label for="email">Почта</label>
+            <input class="form-input" type="email" name="email" id="email" />
+            <svg class="icon" width="18" height="18">
+              <use href="./images/icons.svg#email"></use>
+            </svg>
+          </div>
+          <div class="form-field">
+            <label for="comment">Комментарий</label>
+            <textarea
+              class="form-input"
+              type="text"
+              name="comment"
+              id="comment"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+          <div class="form-field form-checkbox">
+            <input class="form-input" type="checkbox" name="agreemant" id="agreemant" />
+            <span class="check">
+              <svg class="icon icon-check" width="16" height="15">
+                <use href="./images/icons.svg#check"></use>
+              </svg>
+            </span>
+            <label for="agreemant">
+              Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+            </label>
+          </div>
+          <button class="button button-main" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
 
