--- a/portfolio.html
+++ b/portfolio.html
@@ -351,6 +351,18 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subtitle">Подпишитесь на рассылку</p>
+          <form class="form form-subscribe">
+            <input class="form-input" type="email" name="" id="" placeholder="E-mail" />
+            <button class="button button-main" type="submit">
+              Подписаться
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
