--- a/portfolio.html
+++ b/portfolio.html
@@ -354,7 +354,7 @@
         <div class="subscribe">
           <p class="subtitle">Подпишитесь на рассылку</p>
           <form class="form form-subscribe">
-            <input class="form-input" type="email" name="" id="" placeholder="E-mail" />
+            <input class="form-input" type="email" name="email" placeholder="E-mail" />
             <button class="button button-main" type="submit">
               Подписаться
               <svg class="icon" width="24" height="24">
