--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
                   <use href="./images/icons.svg#check"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+              Соглашаюсь с рассылкой и принимаю
+              <a href="" class="checkbox-link">Условия договора</a>
             </label>
           </div>
           <button class="button button-main" type="submit">Отправить</button>
