--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <div class="form-field">
             <label for="comment">Комментарий</label>
             <textarea
-              class="form-input"
+              class="form-textarea"
               name="comment"
               id="comment"
               placeholder="Введите текст"
