--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           </div>
           <div class="form-field form-checkbox">
             <label for="agreemant">
-              <input class="form-input" type="checkbox" name="agreemant" id="agreemant" />
+              <input type="checkbox" name="agreemant" id="agreemant" />
               <span class="check">
                 <svg class="icon icon-check" width="16" height="15">
                   <use href="./images/icons.svg#check"></use>
